1.3.1
-----

- Fixed a huge ilLoadPal() bug.


1.3.0
-----

- Reworked sources tree.
- Updated *nix support, now uses autoconf/automake.
- Optimized ilCopyPixels and ilSetPixels if the destination and source formats/types are the same (suggestion by Kenneth Hurley).
- Fixed an ilSetPixels memory leak.
- Fixed the Big Endian versions of GetLittleFloat and GetLittleDouble.
- Changed iprintf to ilprintf to fix an error compiling with Cygwin.
- Changed iCurImage to iluCurImage and ilutCurImage in ILU and ILUT, respectively, to help with static libs.
- Removed ilShutDown call from ilInit (gave an erroneous error).
- Changed return type of ilSaveF and ilSaveL to return how many bytes were written.
- Added colour-indexed support to .tif saving.
- Fixed colour-indexed support with .bmp saving.
- Added MSVC++ 7 solutions and projects.
- Fixed an ilConvertImage bug when a colour profile was present in the image.
- Upgraded to LittleCMS 1.0.8.
- Updated some of the DDS loading to load more images.
- Added .psd support.
- Added some more Endian swap routines.
- Added offsets to internal image struct and added IL_IMAGE_OFFX and IL_IMAGE_OFFY to il.h.
- Added some more permissable Modes to ilSetInteger.
- Changed a malloc to ialloc in il_profiles.c.
- Added Kenneth Hurley's contributions to the DDS code.
- Added NeuQuant code and defines for controlling quantization.
- Fixed PowerBasic test files.
- Added GDI+ and MFC static library interfaces.
- Added more Modes for ilSetString, along with setting the C Header output string.
- Added DDS saving.
- Added preliminary (not functional) .psp support.
- Added a config.h generator for MSVC++.


1.2.4
-----

- Moved ilInit to il_istack.c.
- Changed iFreeMem to ilShutDown, and made it external.
- Rewrote much of the DDS support.
- Made a "Dynamic" project in the MSVC++ workspace, where it delayloads some external libraries for a smaller memory footprint.


1.2.2
-----

- Removed saving support for .bmp files with negative heights.