@@ -2,6 +2,8 @@
 -----
 
 - Fixed a huge ilLoadPal() bug.
+- Disabled SDL (hopefully temporarily) to get rid of their main() mangling.
+- Fixed greyscale .bmp saving bug.
 
 
 1.3.0
